# cse375-rust-linalg

./: Cargo.toml  README.md
resources/: add.cu  add.ptx
scripts/: recompile_cuda.bat
src/: lib.rs  main.rs
