[package]
name = "linalg"
version = "0.1.0"
authors = ["Evan Hruskar <hruskar.evan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = "0.1"
rustacuda_derive = "0.1"
rustacuda_core = "0.1"

# Comparison linear algebra systems
ndarray = "0.14.0"
nalgebra = "0.23.1"